Fix element id typo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Example WebApp Bot</title>
   </head>
   <body>
-    <div id="#info"></div>
+    <div id="info"></div>
   </body>
   <script src="main.js"></script>
 </html>
